        > KSA-EXECUTION-EVENT -> KSA-EXECUTING-EVENT
        > KSA-OBVIATION-EVENT -> KSA-OBVIATED-EVENT
        > KSA-RETRIGGER-EVENT -> KSA-RETRIGGERED-EVENT

  * Changes to GBBopen initiate & startup
     - New FUNCALL-IN-PACKAGE function

  * Changes to Module Manager
     - Default value of *AUTOMATICALLY-CREATE-MISSING-DIRECTORIES* changed 
       from NIL to T

  * Changes to GBBopen Tools
     - New VERY-BRIEF-DATE function
     - New :include-year keyword argument to BRIEF-DATE
     - New :default-to-current-year keyword argument to ENCODE-DATE-AND-TIME,
       PARSE-DATE, and PARSE-DATE-AND-TIME
     - New :time-first keyword argument to ENCODE-DATE-AND-TIME and 
       PARSE-DATE-AND-TIME
     - New *TIME-FIRST* and *YEAR-FIRST* variables
     - New WHITESPACE-CHAR-P function
     - Document PRINTVOT macro
     - Export SORTF and STABLE-SORTF macros
     - New MAKE-HASH-VALUES-VECTOR and SORTED-MAPHASH functions
     - Support user-provided string-coalescing hash table in 
       WITH-READING-SAVED/SENT-OBJECTS-BLOCK

  * Changes to extended-REPL commands
     - :ut (describe/encode univeral-time value) command encodes string argument

  * Changes to GBBopen
     - New *SKIP-DELETED-UNIT-INSTANCE-CLASS-CHANGE* and 
       *REPOSITORY-LOAD-PERCENTAGE-HOOK-FUNCTIONS* variables
     - New CHECK-ALL-INSTANCE-LINKS and CHECK-INSTANCE-LOCATORS functions
     - New WITH-BLACKBOARD-REPOSITORY-LOCKED macro
     - Documented *FIND-VERBOSE*, *USE-MARKING*, CHECK-FOR-DELETED-INSTANCE

  * Changes to GBBopen Extensions
     - Experimental journaling and network-streaming

  * Changes to Agenda Shell
     - New CONTROL-SHELL-HIBERNATING/AWAKENED-EVENT abstract control-shell
       event and CONTROL-SHELL-AWAKENED-EVENT control-shell event


Important changes in GBBopen 1.5:

  * Changes to gbbopen-modules directory processing
     - New *GBBOPEN-MODULES-DIRECTORY-VERBOSE* and *SYM-FILE-VERBOSE* 
       global variables

  * Changes to extended-REPL commands